--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="main_wrapper">
-
+        <app-header></app-header>
         <div class="full_container my_trends common-padding white_bg">
+               
             <app-mytrends></app-mytrends>
         </div>
         <div class="main_topic">
