--- a/src/app/answerdetails/answerdetails.component.html
+++ b/src/app/answerdetails/answerdetails.component.html
@@ -15,11 +15,47 @@
                             </div>
                         </div>
                     </div>
-                    <div class="name_info">Hello</div>
+                    <div class="name_info">
+                        <div class="subscribr_con f_Container">
+                            <div>
+                                <img src="../../assets/images/earn_ico.png" alt="">
+                            </div>
+                            <div class="subscribe_btn">
+                                <a href="">Subscribe</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <p class="profile_img">
+            <div  class="profile_img">
                 <img src="../../assets/images/profile_image.png" alt="">
-            </p>
+                <div class="let_right_arrow">
+                    <div class="f_left_ar">
+                        <img src="../../assets/images/left_arrow.png" alt="">
+                    </div>
+                    <div class="f_right_ar">
+                        <img src="../../assets/images/right_arrow.png" alt="">
+                    </div>
+                </div>
         </div>
+          
+        </div>
+       <div class="full_container white_bg">
+
+        <div class="audio_player">Audio Player</div>
+        <div class="like_commoent_share f_Container">
+            <div class="like_ico ico_common_btn"><span><img src="../../assets/images/like_ico.png"/></span><label>10</label></div>
+            <div class="like_ico ico_common_btn"><span><img src="../../assets/images/ic_message.png"/></span><label>10</label></div>
+            <div class="like_ico ico_common_btn"><span><img src="../../assets/images/destial_wp_ico.png"/></span><label>10</label></div>
+        </div>
+        <div class="relatedd_answer full_container">
+            <app-realtedanswer></app-realtedanswer>
+        </div>
+        <div class="full_container relative_question">
+            <app-relativequestion></app-relativequestion>
+        </div>
+        <div class="comment_listing full_container">
+            <app-comment-listing></app-comment-listing>
+        </div>
+       </div>
 </div>
